--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "NodeLearn",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "node的学习",
   "main": "src/app.js",
+  "bin": {
+      "anydoor": "bin/anydoor"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
